TextContent modified